--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,6 @@
 .card {
     display: flex;
-    min-width: 900px;
-    max-width: 900px;
+    width: 900px;
     align-items: center;
     margin: auto;
     padding: 10px;
